# package_example

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
example/: example.py
tests/: test_example.py
